--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,9 @@
 
 /* Right column (page content) */
 .right {
-  flex: 65%;
-  padding: 15px;
+flex: 65%;
+padding: 12px 0px 15px 28.5em;
+margin: 9px;
 }
 
 /* Style the search box */
@@ -96,4 +97,71 @@ nav {
 
 img {
   max-width: 120px;
+}
+
+body {
+  background: #f39c12;
+}
+.center-on-page {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+h1 {
+  text-align: center;
+}
+/* Reset Select */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #2c3e50;
+  background-image: none;
+}
+/* Custom Select */
+.select {
+position: relative;
+display: block;
+width: 36em;
+height: 3em;
+line-height: 3;
+background: #e28114;
+overflow: hidden;
+border-radius: 10.25em;
+}
+select {
+  width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0 0 0 11.5em;
+    color: #d40fe8;
+    cursor: pointer;
+}
+select::-ms-expand {
+  display: none;
+}
+/* Arrow */
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0 1em;
+  background: #34495e;
+  pointer-events: none;
+}
+/* Transition */
+.select:hover::after {
+  color: #f39c12;
+}
+.select::after {
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
 }
