--- a/myproject/myapp/static/myapp/styles.css
+++ b/myproject/myapp/static/myapp/styles.css
@@ -89,6 +89,11 @@ nav {
   margin: 20px 0px 15px 0px;
 }
 
+nav ul li a:hover {
+	color: #ffcccc;
+}
+
+
 #img {
   display: block;
   text-align: center;
@@ -98,9 +103,50 @@ nav {
 img {
   max-width: 120px;
 }
+/********DROPDOWN MENU***/
+.dropbtn {
+  background-color: white;
+  border: none;
+}
+
+
+.dropbtn:hover {
+  color: #ffcccc;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.drop-content {
+  display: none;
+  position: absolute;
+  min-width: 230px;
+}
+
+.drop-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.drop-content a:hover {color: #ffcccc}
+
+.dropdown:hover .drop-content {
+  display: block;
+  background-color:white;
+  border: 1px solid black;
+}
+
+.dropdown:hover .dropbtn {
+  background-color:;
+}
 
 body {
-  background: #f39c12;
+  background: white;
 }
 .center-on-page {
   position: absolute;
@@ -120,7 +166,7 @@ select {
   outline: 0;
   box-shadow: none;
   border: 0 !important;
-  background: #2c3e50;
+  background: #cccccc;
   background-image: none;
 }
 /* Custom Select */
@@ -139,7 +185,7 @@ select {
     height: 100%;
     margin: 0px;
     padding: 0 0 0 11.5em;
-    color: #d40fe8;
+    color: black;
     cursor: pointer;
 }
 select::-ms-expand {
@@ -164,4 +210,7 @@ select::-ms-expand {
   -webkit-transition: .25s all ease;
   -o-transition: .25s all ease;
   transition: .25s all ease;
+}
+#paradise{
+  text-align: left;
 }
